# BusinessControl

./: Dockerfile.admin  Dockerfile.libs  Dockerfile.tasks  README.md  docker-compose-db.yaml  docker-compose.yaml  env.example
api_admin/: env.example  pyproject.toml
api_admin/app/: main.py
api_admin/app/admin_panel/: admin_panel.py
api_admin/app/api/: api_admin.py
api_admin/app/core/: dependency.py  settings.py
api_admin/app/crud/: admin_crud.py
api_admin/app/schemas/: schemas.py
api_admin/app/services/: admin_services.py
api_admin/app/tests/: conftest.py
api_admin/app/tests/api_admin/: test_api_admin.py
api_tasks/: pyproject.toml
api_tasks/app/: main.py
api_tasks/app/api/: api_meetings.py  api_tasks.py
api_tasks/app/core/: dependency.py  settings.py
api_tasks/app/crud/: crud_meetings.py  crud_tasks.py
api_tasks/app/schemas/: schemas.py
api_tasks/app/services/: services_meetings.py  services_tasks.py
api_tasks/app/tests/: conftest.py
api_tasks/app/tests/test_api/: test_api_meetings.py  test_api_tasks.py
api_user/: pyproject.toml
api_user/api/: users.py
api_user/app/: main.py  manage.py
api_user/app/api/: users.py
api_user/app/core/: dependency.py  security.py  settings.py
api_user/app/crud/: user_crud.py
api_user/app/schemas/: schemas.py
api_user/app/services/: user_services.py
api_user/app/tests/: conftest.py
api_user/app/tests/api/: test_users.py
api_user/core/: dependency.py
common_db/: docker-compose.yaml  pyproject.toml
common_db/core/: settings.py
common_db/migrations/: env.py
common_db/migrations/versions/: 2025_01_28_1538-c107ea02907d_added_users_company_and_news.py
common_db/tests/migrations/: test_migrations_up_to_date.py  test_stairway.py
libs/: docker-compose-db.yaml  env.example  pyproject.toml
libs/crud/: base_crud.py
libs/database/: alembic.ini
libs/database/core/: settings.py
libs/database/migrations/: env.py
libs/database/migrations/versions/: 2025_01_28_2013-0135124fb163_added_users_and_company_models.py  2025_01_28_2112-81355910dc45_users_unique.py  2025_01_29_0417-d12aa0973153_dix_field_name.py  (+11 more)
libs/database/models/: __init__.py  companies.py  meetings.py  tasks.py  users.py  utils.py
libs/database/tests/: utils.py
libs/redis_cli/: redis_client.py
libs/repository/: base_crud.py
libs/schemas/: users.py
libs/tests_config/: factory.py  utils.py
(+3 files in other folders)
