[tool.poetry]
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.7"
sqlalchemy = "^2.0.37"
pydantic-settings = "^2.7.1"
uvicorn = {extras = ["standart"], version = "^0.34.0"}
pydantic = {extras = ["email"], version = "^2.10.6"}
asyncpg = "^0.30.0"
pyjwt = "^2.10.1"
redis = "^5.2.1"
sqladmin = "^0.20.1"
psycopg2-binary = "^2.9.10"
itsdangerous = "^2.2.0"
httpx = "^0.28.1"
faker = "^35.0.0"
bcrypt = "^4.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
mypy = "^1.14.1"
black = "^24.10.0"
isort = "^6.0.0"
pylint = "^3.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# black
[tool.black]
line-length = 79
extend-exclude = "migrations/"

# isort
[tool.isort]
profile = "black"
extend_skip_glob = ["migrations"]
known_local_folder=["core", "crud", "api", "models", "schemas", "tests", "main", "utils"]
line_length = 79
lines_after_imports = 2


# mypy
[tool.mypy]
exclude = ["migrations/"]

[tool.pylint]
ignore = [".git", "__pycache__", "migrations", ".venv"]
max-line-length = 79
disable = ["C0114", "C0115", "C0116", "W1514", "W3101", "R0903", "C0103"]

# pytest
[tool.pytest.ini_options]
addopts = "-x"
testpaths = ["app/tests"]
