[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.14.1"
sqlalchemy = "^2.0.37"
pydantic-settings = "^2.7.1"
pydantic = {extras = ["email"], version = "^2.10.6"}
psycopg2-binary = "^2.9.10"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.3"
pytest = "^8.3.4"
mypy = "^1.14.1"
isort = "^5.13.2"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# black
[tool.black]
line-length = 79
extend-exclude = "migrations/"

# isort
[tool.isort]
profile = "black"
extend_skip_glob = ["migrations"]
known_local_folder=["core", "crud", "api", "models", "schemas", "tests", "main", "utils"]
line_length = 79
lines_after_imports = 2


# mypy
[tool.mypy]
exclude = ["migrations/"]

[tool.pylint]
ignore = [".git", "__pycache__", "migrations", ".venv"]
max-line-length = 79
disable = ["C0114", "C0115", "C0116", "W1514", "W3101", "R0903", "C0103"]

# pytest
[tool.pytest.ini_options]
addopts = "-x"
testpaths = ["tests"]